Commit 4 19.08.21 Add 1 files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_mvc_security_bootstrap_rest_js?useSSL=false&requireSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=ALEKA678022
 
+#Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=DEBUG
